# rules_wpiformat

./: .bazelrc-java  .wpiformat  MODULE.bazel  README.md  WORKSPACE  requirements.txt  requirements_lock.txt  requirements_windows.txt
.github/workflows/: build.yml  lint.yml  publish.yml
dependencies/: load_dependencies.bzl  load_rule_dependencies.bzl  load_transitive_dependencies.bzl
generate/: BUILD.bazel  MODULE.bazel  MODULE.bazel.jinja2  WORKSPACE  generate.py  get_version.py  get_wpiformat_group.py  publish.py
wpiformat/: BUILD.bazel  defs.bzl  format.py  format_registered_targets.sh  load_dependencies.bzl  load_wpiformat_rules_dependencies.bzl
