py_library(
    name = "get_wpiformat_group",
    srcs = ["get_wpiformat_group.py"],
    visibility = ["//visibility:public"],
    deps = [
        "@bzlmodrio-gentool//bazelrio_gentool",
    ],
)

py_binary(
    name = "generate",
    srcs = ["generate.py"],
    deps = [
        ":get_wpiformat_group",
        "@bzlmodrio-gentool//bazelrio_gentool",
    ],
)

py_binary(
    name = "publish",
    srcs = ["publish.py"],
    deps = [
        ":get_wpiformat_group",
        "@bzlmodrio-gentool//bazelrio_gentool",
    ],
)
