load("@rules_python//python:defs.bzl", "py_binary")
load("@rules_shell//shell:sh_binary.bzl", "sh_binary")
load("@rules_wpiformat_pip//:requirements.bzl", "requirement")

exports_files(["format.py"])

py_binary(
    name = "wpiformat",
    srcs = ["format.py"],
    main = "format.py",
    tags = ["no-sandbox"],
    visibility = ["//visibility:public"],
    deps = [
        requirement("wpiformat"),
    ],
)

sh_binary(
    name = "format_registered_targets",
    srcs = ["format_registered_targets.sh"],
)
